--- a/public/assets/css/cssBack/cssBack.css
+++ b/public/assets/css/cssBack/cssBack.css
@@ -3,6 +3,11 @@ main
 	width: 980px;
 	margin: auto;
 }
+/*style du header*/
+header
+{
+	height: 80px;
+}
 
 .logo
 {
@@ -11,25 +16,20 @@ main
 	background-image: url("../../img/logo/logo.jpg");
 	background-size: 60px 60px;
 	float: left;
-	
     margin-top: 10px;
 }
-header
-{
-	height: 80px;
-	background-color: ;
-}
 
-header nav
+body > main > div > header > nav > div > div.logo
 {
 	margin-left: 120px;
+	margin-top: 0px;
 }
 
 header nav ul
 {
 	margin-top: 0px;
-} 
 
+} 
 
 header nav ul li
 {
@@ -45,6 +45,14 @@ header nav ul li a
 	color: white;
 }
 
+/*bootstrap nav header*/
+.btn-group
+{
+	float: left;
+	margin-top: 15px;
+	margin-left: 150px;
+}
+/*style du container*/
 .container
 {
 	background-color: #979797
@@ -52,7 +60,7 @@ header nav ul li a
 
 section
 {
-	height: auto;
+	height: 100%;
 	width: auto;
 	background-color: #CECECE
 }
@@ -63,18 +71,7 @@ section h2
 	margin-top: 0px;
 	padding-top: 25px;
 	font-size: 40px;
-}
-
-/*section img
-{
-	float: left;
-	margin-left: 40px;
-}*/
-
-.clearfix
-{
-	clear: both;
-
+	margin-left: 230px;
 }
 
 .form_left
@@ -88,24 +85,88 @@ section h2
 	width: 70%;
 	float: left;
 }
-.btn-group
+
+
+body > main > div > section > div.form_left > form > input.form-control
+{
+	width: 300px;
+}
+
+body > main > div > section > div.form_left > form > select
+{
+	margin-top: 30px;
+}
+
+body > main > div > section > div.form_left > form > input[type="submit"]:nth-child(7)
+{
+	margin-top: 30px;	
+}
+/*affichage des images de presentation du salon*/
+
+.top
+{
+	margin-left: 150px;
+	margin-top: 20px;
+}
+
+.top img
+{
+	width: 400px;
+	height: auto;
+}
+
+.left, .middle, .right
 {
 	float: left;
-	margin-top: 15px;
-	margin-left: 150px;
+}
+
+.left img , .middle img, .right img
+{
+	width: 200px;
+	height: auto;
+	margin-top: 50px;
+	margin-right: 50px;
+}
+
+/*style du lookbook*/
+
+#lookbook
+{
+	margin-top: 40px;
+}
+
+#lookbook img
+{
+	border-radius: 50%;
+	border:1px solid white;
+	width: 150px;
+	height: auto;
+}
+
+.image_lookbook
+{
+	float: left;
+	margin-left: 25px;
 }
 
 
-/*.form_right img
+/*utility*/
+.clearfix
 {
-	float: left;
-	margin-left: 40px;
-}*/
-/*.delete
-{
-	left: 175px;
-    bottom: 134px;
-    position: relative;
-    opacity: 0.5;
-}*/
+	clear: both;
 
+}
+
+body > main > div > section > div.form_left > form > input.form-control
+{
+	margin-top: 50px;
+}
+
+body > main > div > section > div.form_left > form > input[type="file"]:nth-child(4)
+{
+	margin-top: 30px;
+}
+body > main > div > section > div.form_left > form > input.btn.btn-default
+{
+	margin-top: 30px;
+}
