--- a/public/assets/css/css_theme_front/style.css
+++ b/public/assets/css/css_theme_front/style.css
@@ -1870,14 +1870,6 @@ html { overflow-y: scroll; }
   border-radius: 50%;
   border:4px solid white;
 
-  /*border radius noir*/
-
-  /*  -moz-box-shadow: 10px 15px 50px 0px #000000;
-  -webkit-box-shadow: 10px 15px 50px 0px #000000;
-  -o-box-shadow: 10px 15px 50px 0px #000000;
-  box-shadow: 10px 15px 50px 0px #000000;
-  filter:progid:DXImageTransform.Microsoft.Shadow(color=#000000, Direction=146, Strength=50);*/
-
   /*border radius blanc*/
   -moz-box-shadow: 10px 15px 50px 0px #ffffff;
   -webkit-box-shadow: 10px 15px 50px 0px #ffffff;
@@ -1895,6 +1887,17 @@ html { overflow-y: scroll; }
   float: left;
   margin-left: 20px;
 }
+
+/*responsive du lookbook */
+
+@media screen and (max-width: 418px){
+    .image_lookbook {margin-left: 20px; }
+}
+@media screen and (max-width: 25em){
+    .image_lookbook {margin-left: -35px; }
+}
+
+
 
 
 /*image lookbook sans deformation*/
