--- a/public/assets/css/styleBack.css
+++ b/public/assets/css/styleBack.css
@@ -19,6 +19,7 @@ section h2
 {
 	text-align: center;
 	margin-top: 50px;
+	min-width: 316px;
 }
 
 
@@ -41,13 +42,22 @@ section h2
 	width: 250px;
 	height: auto;
 }
+/*responsive image de présentation du salon*/
+@media screen and (max-width: 442px){
+    .top
+    {
+    	margin-left: 0px;
+    	width: 250px;
+		height: auto;
+    }
+
+}
 
 /*style de la page du lookbook*/
 
 #lookbook
 {
 	margin-top: 60px;
-	margin-left: 200px;
 }
 
 #lookbook img
@@ -69,6 +79,23 @@ section h2
 {
 	text-transform: uppercase;
 }
+
+body > div.wrapper.row-offcanvas.row-offcanvas-left > aside.right-side > section > h2
+{
+	padding-right: 100px;
+}
+
+/*responsive lookbook*/
+@media screen and (max-width: 442px){
+    .image_lookbook{ min-width: 441px; }
+}
+@media screen and (max-width: 25em){
+    .image_lookbook img {margin-left: -40px;}
+    body > div.wrapper.row-offcanvas.row-offcanvas-left > aside.right-side > section > h2{ padding-right: 0px;}
+
+}
+
+
 /*fancybox*/
 .hidden {
  display: none;   
@@ -174,13 +201,3 @@ hr
 	border-color: black;
 }
 
-@media screen and (max-width: 34em) {
-  #lookbook {
-
-  }
-  #lookbook img {
-  	float: none;
-  	margin-left: -100px;
-  	width: 100%;
-  }
-}
