--- a/public/assets/source/jquery.fancybox.css
+++ b/public/assets/source/jquery.fancybox.css
@@ -164,7 +164,7 @@
 
 /* Overlay helper */
 
-.fancybox-lock {
+/*.fancybox-lock {
     overflow: hidden !important;
     width: auto;
 }
@@ -176,7 +176,7 @@
 .fancybox-lock-test {
     overflow-y: hidden !important;
 }
-
+*/
 .fancybox-overlay {
 	position: absolute;
 	top: 0;
